Fix issue where before the image fully loads, the page jumps around

--- a/css/custom.css
+++ b/css/custom.css
@@ -160,8 +160,18 @@ body {
   }
 
   .project-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
     animation: 1200ms ease-out 0s 1 slideInFromBottom;
+  }
+
+  .img-container {
+    padding-bottom: 56.25%;
+    position: relative;
+    width: 100%;
   }
 }
 
